package OpenChain;

message Transaction {

    message AccountEntry {
        required string account = 1;
        required string asset = 2;
        required sint64 amount = 3;
        required bytes version = 4;
    }

    required string ledger_id = 1;
    repeated AccountEntry account_entries = 2;
    required bytes metadata = 3;
}

message LedgerRecord {
   required bytes payload = 1;
   required int64 timestamp = 2;
   required bytes record_metadata = 3;
}
